objects/FinServ__Securities__c.object
<CustomObject>
    <description>An asset that is part of a client&apos;s financial holding.</description>
    <fields>
        <fullName>FinServ__AssetCategoryName__c</fullName>
        <description>Market capitalization and investing style</description>
        <label>Asset Category Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Large Growth</fullName>
                </value>
                <value>
                    <fullName>Large Value</fullName>
                </value>
                <value>
                    <fullName>Large Blend</fullName>
                </value>
                <value>
                    <fullName>Small Growth</fullName>
                </value>
                <value>
                    <fullName>Small Value</fullName>
                </value>
                <value>
                    <fullName>Small Blend</fullName>
                </value>
                <value>
                    <fullName>Mid-Cap Growth</fullName>
                </value>
                <value>
                    <fullName>Mid-Cap Value</fullName>
                </value>
                <value>
                    <fullName>Mid-Cap Blend</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__AssetCategory__c</fullName>
        <description>Subcategory of asset type.</description>
        <label>Asset Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>U.S. Equity</fullName>
                </value>
                <value>
                    <fullName>Sector Equity</fullName>
                </value>
                <value>
                    <fullName>Allocation</fullName>
                </value>
                <value>
                    <fullName>International Equity</fullName>
                </value>
                <value>
                    <fullName>Alternative</fullName>
                </value>
                <value>
                    <fullName>Commodities</fullName>
                </value>
                <value>
                    <fullName>Taxable Bond</fullName>
                </value>
                <value>
                    <fullName>Municipal Bond</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__AssetClass__c</fullName>
        <description>Major category of asset type.</description>
        <label>Asset Class</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Equities</fullName>
                </value>
                <value>
                    <fullName>Fixed Income</fullName>
                </value>
                <value>
                    <fullName>Cash Equivalents</fullName>
                </value>
                <value>
                    <fullName>Alternative Investments</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__CUSIP__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CUSIP</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__Exchange__c</fullName>
        <label>Exchange</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NYSE</fullName>
                </value>
                <value>
                    <fullName>NASDAQ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__LastUpdated__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Updated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FinServ__Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__SecuritiesName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Securities Name</label>
        <length>150</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FinServ__SecurityId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Security ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__SourceSystemId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Source System ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Securities</label>
    <listViews>
        <fullName>FinServ__All</fullName>
        <columns>FinServ__SecuritiesName__c</columns>
        <columns>NAME</columns>
        <columns>FinServ__Price__c</columns>
        <columns>FinServ__CUSIP__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Symbol</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Securities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>